crates/moire-source-context/src/snapshots/moire_source_context__tests__fn_decl_target.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn spawn_worker(task_name, mutex)
# scope 7..9

   7  |     moire::task::spawn(async move {
   8  |         let _guard = mutex.lock();
   9  |     }.named(task_name));
