crates/moire-source-context/src/snapshots/moire_source_context__tests__named_in_spawn.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn spawn_lock_order_worker(task_name, first_name, first, second_name, second, ready_barrier, completed_tx)
# scope 12..25

  12  |     moire::task::spawn(async move {
      | ...
  25 >|     }.named(task_name));
